# RoboticDog

./: .gitignore
py/: code.py
robodog-esp/: CMakeLists.txt
robodog-esp/main/: CMakeLists.txt  main.c
robodog-esp/main/include/: cal.h  debug.h  globals.h  inits.h  leg.hpp  legWrapper.h  pca9685.hpp  servoPCA.hpp  servoPCAWrapper.h  web.h
robodog-esp/main/src/: debug.c  globals.c  inits.c  leg.cpp  legWrapper.cpp  pca9685.cpp  pca9685Wrapper.cpp  servoPCA.cpp  servoPCAWrapper.cpp  web.c
